fixing layout Issue and Adding Border to Todo Item

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 *{
-  border:1px dotted black;
+  /* border:1px dotted black; */
   /* padding:1px;
   margin:1px; */
   box-sizing: border-box;
